# faster-than-csv

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PKG-INFO  README.md  benchmark.py  build-docker.sh  build.nims  build.sh  faster_than_csv.nimble  index.html  install2local4testing.sh  package.sh  package4pypi.sh  results.csv  run-benchmark.sh  run-docker.sh  setup.cfg  setup.py  upload2pypi.sh
.github/workflows/: build.yml  manual_build.yml
doc/: index.html
docs/: faster_than_csv.tex  index.html
example/: csv.html  example.py  sample.csv  sample.html  sample.ndjson
examples/: example.py  example2.py
examples/stresstest/: covid.csv  test.py
faster_than_csv/: __init__.py  faster_than_csv.nim  faster_than_csv.nim.cfg
src/: faster_than_csv.nim  faster_than_csv.nim.cfg
tools/: list_files_from_pkg.py
