# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = faster_than_csv
provides         = faster_than_csv
description      = Faster & simpler CSV replacement for Python.
url              = https://github.com/juancarlospaco/faster-than-csv#faster-than-csv
download_url     = https://github.com/juancarlospaco/faster-than-csv/releases
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
maintainer       = Juan Carlos
maintainer_email = juancarlospaco@gmail.com
keywords         = python3, cpython, speed, csv
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 0.1
project_urls     =
    Docs = https://github.com/juancarlospaco/faster-than-csv#faster-than-csv
    Bugs = https://github.com/juancarlospaco/faster-than-csv/issues

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
python_requires  = >3.5
packages         = find:

[bdist_wheel]
universal = 1

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = false

[options.package_data]
* = *.c, *.h, nimbase.h

[options.exclude_package_data]
* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[options.packages.find]
where   = .
include = *.c, *.h, nimbase.h
exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
