# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = faster_than_csv
provides         = faster_than_csv
description      = Faster & simpler CSV replacement for Python.
url              = https://github.com/juancarlospaco/faster-than-csv#faster-than-csv
download_url     = https://github.com/juancarlospaco/faster-than-csv/releases
author           = Juan Carlos
author_email     = juancarlospaco@gmail.com
maintainer       = Juan Carlos
maintainer_email = juancarlospaco@gmail.com
keywords         = python3, cpython, speed, cython, c, performance, compiled, native
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 1.1
license_file     = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Environment :: Other Environment
  Intended Audience :: Other Audience
  Operating System :: OS Independent
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Software Development

[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.8
packages         = find:

[options.package_data]
* = *.c, *.h

[options.exclude_package_data]
* = *.py, *.pyc, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests

[options.packages.find]
include = *.c, *.h
exclude = *.py, *.pyc, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests
